--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "ag-grid-angular": "^21.0.1",
+    "ag-grid-community": "^21.0.1",
+    "ag-grid-enterprise": "^21.0.1",
+    "moment": "^2.24.0",
+    "net": "^1.0.2",
     "rxjs": "~6.4.0",
+    "sockjs-client": "^1.3.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
