--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@types/jquery": "^3.3.30",
     "ag-grid-angular": "^21.0.1",
     "ag-grid-community": "^21.0.1",
     "ag-grid-enterprise": "^21.0.1",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "net": "^1.0.2",
     "rxjs": "~6.4.0",
