--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.1",
+    "@angular/animations": "^8.1.0",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
     "@angular/forms": "~8.0.1",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
@@ -26,6 +28,8 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "net": "^1.0.2",
+    "ng-pick-datetime": "^7.0.0",
+    "ngx-material-timepicker": "^4.0.0",
     "rxjs": "~6.4.0",
     "sockjs-client": "^1.3.0",
     "stompjs": "^2.3.3",
