--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@types/jquery": "^3.3.30",
     "ag-grid-angular": "^21.0.1",
     "ag-grid-community": "^21.0.1",
     "ag-grid-enterprise": "^21.0.1",
-    "jquery": "^3.4.1",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
     "moment": "^2.24.0",
     "net": "^1.0.2",
     "ng-pick-datetime": "^7.0.0",
@@ -37,13 +39,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/build-angular": "^0.800.6",
     "@angular/cli": "~8.0.3",
     "@angular/compiler-cli": "~8.0.1",
     "@angular/language-service": "~8.0.1",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
